feat:added config file and loader for css

--- a/package.json
+++ b/package.json
@@ -1,8 +1,34 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "name": "webpack-starter",
+  "description": "",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack",
+    "build": "babel src -d lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/suryxks/webpack-starter.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/suryxks/webpack-starter/issues"
+  },
+  "homepage": "https://github.com/suryxks/webpack-starter#readme"
 }
