--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "@babel/preset-env": "^7.19.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.2",
     "style-loader": "^3.3.1",
-    "webpack": "^5.74.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "webpack-cli": "^4.10.0"
+    "lodash": "^4.17.21"
   },
   "name": "webpack-starter",
   "description": "",
