--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.2",
+    "csv-loader": "^3.0.5",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.0",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
