--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.2",
     "csv-loader": "^3.0.5",
+    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
@@ -21,7 +23,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
