--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
@@ -24,9 +25,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
-    "build": "babel src -d lib",
     "watch": "webpack --watch",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
