--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "devDependencies": {
     "@babel/core": "^7.19.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/plugin-transform-typescript": "^7.20.2",
     "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.2",
     "csv-loader": "^3.0.5",
+    "eslint": "^8.28.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
@@ -16,7 +22,9 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "name": "webpack-starter",
   "description": "",
