--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
+    "degit": "^2.8.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
